...
                        .size(24.dp)
                        .clickable(onClick = onBackClick),
                    contentAlignment = Alignment.Center,
                ) {
                    Icon(
                        imageVector = LinkItIcons.ArrowBack,
                        contentDescription = "뒤로 가기",
                        tint = HeaderText,
                    )
                }
                Spacer(modifier = Modifier.width(4.dp))
            }
            Text(
...
